--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
       </div>
     </div>
   </header>
+    <div class="top-wrapper">
+    <div class="container">
+      <h1>XXXX<br>試してみよう</h1>
+      <p>最初にページレイアウトを設計</p>
+    </div>
+  </div>
 </body>
 </html>
