--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-      <p>開発途中のページ<br>独学でプログラミングを学んでいきましょう。</p>
+      <p>このページで<br>独学でプログラミングを学んでいきましょう。</p>
       </div>
     </div>
   </header>
