--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-      <p>このページで<br>独学でプログラミングを学んでいきましょう。</p>
+      <p>開発途中のページ<br>独学でプログラミングを学んでいきましょう。</p>
       </div>
     </div>
   </header>
@@ -22,6 +22,19 @@
       <h1>XXXX<br>試してみよう</h1>
       <p>最初にページレイアウトを設計</p>
     </div>
+    <div>
+      <button>BOX01</button>
+    </div>
+    <div>
+      <button>BOX02</button>
+    </div>
+    <div>
+      <button>BOX03</button>
+    </div>
+    <div>
+      <button>BOX04</button>
+    </div>
+
   </div>
 </body>
 </html>
