--- a/index.html
+++ b/index.html
@@ -17,24 +17,40 @@
       </div>
     </div>
   </header>
-    <div class="top-wrapper">
+  <div class="top-wrapper">
     <div class="container">
       <h1>XXXX<br>試してみよう</h1>
       <p>最初にページレイアウトを設計</p>
     </div>
-    <div>
-      <button>BOX01</button>
+    <div class="QuizFrame">
+      <div class="present_box">
+        <a>1.BOX</a>
+        <button>BOX01</button>
+      </div>
+      <div>
+        <a>2.BOX</a>
+        <button>BOX02</button>
+      </div>
+      <div>
+        <a>3.BOX</a>
+        <button>BOX03</button>
+      </div>
+      <div>
+        <a>4.BOX</a>
+        <button>BOX04</button>
+      </div>
     </div>
+  </div>
+  <div>
     <div>
-      <button>BOX02</button>
-    </div>
+      <img src="mark_batsu.png" width="80px" height="80px">
+    </div>  
     <div>
-      <button>BOX03</button>
-    </div>
+      <img src="mark_maru.png" width="80px" height="80px">
+    </div>  
     <div>
-      <button>BOX04</button>
-    </div>
-
+      <img src="present_box.png" width="80px" height="80px">
+    </div>  
   </div>
 </body>
 </html>
