--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-  <div id=""></div>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-  <script>
-    var app = new Vue();
-  </script>
+  <div id="app01"> <!-- Vueエリア -->
   <header>
     <div class="container">
       <div class="header-left">
-        <p>開発途中のページ<br>独学でプログラミングを学んでいきましょう。</p>
+        <p>夏休み自由研究特設サイト<br>Ver.182</p>
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
@@ -24,51 +20,110 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>XXXX<br>試してみよう</h1>
+      <h1>推しアクスタを探せ！！</h1>
     </div>
     <div class="container">
       <a>お名前</a>
-      <input type="text" id="name" name="name" autocomplete ></input>
+      <input type="text" id="name" name="name" autocomplete v-model="nameTxIn"></input>
      </div>
      <div class="container">
-      <p>下の4つの箱のどれかにアクスタが入っているよ。<br>
+      <p>このページにようこそ。これを見ている君はシオさん推しに違いない。<br>下の4つの箱のどれかにアクスタが入っているよ。<br>
       一つを選んで開けてみよう。</p>
     </div>
+    <div v-if="gameSt==2">
+      <button class="rep_button" @click="onRestrt()">★- もう一度遊ぶ。 -★</button>
+    </div>
     <div class="msgbox">
-      <p>ここにメッセージ</p>
-    </div>    
+      <p>--- メッセージ ---</p>
+      <p v-if="gameSt==1">{{nameTx}}さん、流石です。<br>大好き！！！</p>
+      <p v-if="gameSt==2">{{nameTx}}さん、残念惜しい。</p>
+      <p v-if="gameCount==5">失敗5回目です。{{nameTx}}さんでは当てられないのかもしれません。</p>
+      <p v-if="gameCount>=10">失敗{{gameCount}}回目です。{{nameTx}}さんでは当てられないのかもしれません。</p>
+    </div>
+    <div class="debugBoc">
+      <p>nameTx{{nameTx}}</p>
+      <p>gameSt{{gameSt}}</p>
+      <p>atari{{atari}}</p>
+      <p>gameCount{{gameCount}}</p>
+    </div>
     <div class="Quiz-wrapper">
-      <div class="present_box">
+      <div class="present_box" @click="onSelect(1)">
         <a>1.BOX</a>
-        <button>BOX01</button>
+        <img v-if="boxSt[0]==0" class="BoxImg00" src="present_box.png" >
+        <img v-if="boxSt[0]==1" class="BoxImg00" src="mark_maru.png" >
+        <img v-if="boxSt[0]==2" class="BoxImg00" src="mark_batsu.png" >
+        <img v-if="atari==1" class="BoxImg00" src="shio04.png" >
       </div>
-      <div class="present_box">
+      <div class="present_box" @click="onSelect(2)">
         <a>2.BOX</a>
-        <button>BOX02</button>
+        <img v-if="boxSt[1]==0" class="BoxImg00" src="present_box.png" >
+        <img v-if="boxSt[1]==1" class="BoxImg00" src="mark_maru.png" >
+        <img v-if="boxSt[1]==2" class="BoxImg00" src="mark_batsu.png" >
+        <img v-if="atari==2" class="BoxImg00" src="shio04.png" >
       </div>
-      <div class="present_box">
+      <div class="present_box" @click="onSelect(3)">
         <a>3.BOX</a>
-        <button>BOX03</button>
+        <img v-if="boxSt[2]==0" class="BoxImg00" src="present_box.png" >
+        <img v-if="boxSt[2]==1" class="BoxImg00" src="mark_maru.png" >
+        <img v-if="boxSt[2]==2" class="BoxImg00" src="mark_batsu.png" >
+        <img v-if="atari==3" class="BoxImg00" src="shio04.png" >
       </div>
-      <div class="present_box">
+      <div class="present_box" @click="onSelect(4)">
         <a>4.BOX</a>
-        <button>BOX04</button>
+        <img v-if="boxSt[3]==0" class="BoxImg00" src="present_box.png" >
+        <img v-if="boxSt[3]==1" class="BoxImg00" src="mark_maru.png" >
+        <img v-if="boxSt[3]==2" class="BoxImg00" src="mark_batsu.png" >
+        <img v-if="atari==4" class="BoxImg00" src="shio04.png" >
       </div>
     </div>
   </div>
-  <div class="Quiz-wrapper">
-    <div>
-      <img src="mark_batsu.png" width="80px" height="80px">
-    </div>  
-    <div>
-      <img src="mark_maru.png" width="80px" height="80px">
-    </div>  
-    <div>
-      <img src="present_box.png" width="80px" height="80px">
-    </div>  
-    <div>
-      <img src="shio04.png" width="80px" height="80px">
-    </div>  
-  </div>
+</div>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+  <script>
+    var app = new Vue({
+      el: '#app01',
+      data: {
+        nameTxIn:'',
+        nameTx:'@@',
+        boxSt: [0,0,0,0 ],
+        gameSt: 0, 
+        atari:0,
+        gameCount: 1
+      },
+      methods: {
+        onSelect: function(rowsIndex) {
+          if(this.gameSt !=0){return;}
+          if(this.nameTxIn !=''){this.nameTx=this.nameTxIn;
+          }else{this.nameTx='◎◎'}
+          var random = Math.floor( Math.random() * 3 );
+          if(random == rowsIndex-1){random =3;}
+          this.atari=random+1;
+          this.boxSt[0]=3;
+          this.boxSt[1]=3;
+          this.boxSt[2]=3;
+          this.boxSt[3]=3;
+          this.boxSt[random]=4;
+          if(['シオ', 'しお','美波シオ'].includes(this.nameTx)){
+            this.atari=rowsIndex;
+            this.gameSt=1;
+            this.boxSt[rowsIndex-1]=1;
+          }else{
+            this.gameSt=2;
+            this.boxSt[rowsIndex-1]=2;
+          }
+          /*結果アニメーションをやりたい*/
+          this.gameCount +=1;
+        },
+        onRestrt:function(){
+          this.gameSt=0;
+          this.atari = 0;
+          this.boxSt[0]=0;
+          this.boxSt[1]=0;
+          this.boxSt[2]=0;
+          this.boxSt[3]=0;
+        }
+      }
+   })
+  </script>
 </body>
 </html>
